Fix rendering config options in docs
Fixes #26515

Signed-off-by: Martin Bartoš <mabartos@redhat.com>