@@ -22,21 +22,25 @@ import java.util.Arrays;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.Comparator;
+import java.util.EnumMap;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Objects;
+import java.util.Optional;
+import java.util.Set;
+import java.util.TreeSet;
 import java.util.stream.Collectors;
 import java.util.stream.StreamSupport;
 
 public class Options {
 
-    private final Map<String, Option> options;
+    private final Map<OptionCategory, Set<Option>> options;
     private final Map<String, Map<String, List<Option>>> providerOptions = new LinkedHashMap<>();
 
-    @SuppressWarnings("unchecked")
     public Options() {
-        options = PropertyMappers.getMappers().stream()
+        this.options = new EnumMap<>(OptionCategory.class);
+        PropertyMappers.getMappers().stream()
                 .filter(m -> !m.isHidden())
                 .filter(propertyMapper -> Objects.nonNull(propertyMapper.getDescription()))
                 .map(m -> new Option(m.getFrom(),
@@ -48,16 +52,17 @@ public class Options {
                         m.getExpectedValues(),
                         m.getEnabledWhen().orElse(""),
                         m.getDeprecatedMetadata().orElse(null)))
-                .sorted(Comparator.comparing(Option::getKey))
-                .collect(Collectors.toMap(Option::getKey, o -> o, (o1, o2) -> o1, LinkedHashMap::new)); // Need to ignore duplicate keys??
+                .forEach(o -> options.computeIfAbsent(o.category, k -> new TreeSet<>(Comparator.comparing(Option::getKey))).add(o));
+
         ProviderManager providerManager = Providers.getProviderManager(Thread.currentThread().getContextClassLoader());
 
-        options.forEach((s, option) -> {
-            option.description = option.description.replaceAll("'([^ ]*)'", "`$1`");
-        });
+        options.values()
+                .stream()
+                .flatMap(Collection::stream)
+                .forEach(option -> option.description = option.description.replaceAll("'([^ ]*)'", "`$1`"));
 
-        for (Spi loadSpi : providerManager.loadSpis().stream().sorted(Comparator.comparing(Spi::getName)).collect(Collectors.toList())) {
-            for (ProviderFactory providerFactory : providerManager.load(loadSpi).stream().sorted(Comparator.comparing(ProviderFactory::getId)).collect(Collectors.toList())) {
+        for (Spi loadSpi : providerManager.loadSpis().stream().sorted(Comparator.comparing(Spi::getName)).toList()) {
+            for (ProviderFactory<?> providerFactory : providerManager.load(loadSpi).stream().sorted(Comparator.comparing(ProviderFactory::getId)).toList()) {
                 List<ProviderConfigProperty> configMetadata = providerFactory.getConfigMetadata();
 
                 if (configMetadata == null) {
@@ -98,21 +103,57 @@ public class Options {
                 .collect(Collectors.toList());
     }
 
-    public Collection<Option> getValues() {
-        return options.values();
-    }
-
     public Collection<Option> getValues(OptionCategory category) {
-        return options.values().stream().filter(o -> o.category.equals(category)).collect(Collectors.toList());
+        return options.getOrDefault(category, Collections.emptySet());
     }
 
     public Option getOption(String key) {
-        return options.get(key);
+        Set<Option> foundOptions = options.values().stream().flatMap(Collection::stream).filter(f -> f.getKey().equals(key)).collect(Collectors.toSet());
+        if (foundOptions.size() > 1) {
+            final var categories = foundOptions.stream().map(f -> f.category).map(OptionCategory::getHeading).collect(Collectors.joining(","));
+            throw new IllegalArgumentException(String.format("Ambiguous options '%s' with categories: %s\n", key, categories));
+        }
+        return foundOptions.iterator().next();
     }
 
-    public List<Option> getOptions(String includeOptions) {
+    /**
+     * Get denied categories for guide options
+     * <p>
+     * Used in cases when multiple options can be found under the same name
+     * By providing 'deniedCategories' parameter, we will not search for the option in these categories
+     * <p>
+     * f.e. when we specify {@code includedOptions="hostname"}, we should provide also {@code deniedCategories="hostname_v2"}
+     * In that case, we will use the option from the old hostname provider
+     *
+     * @return denied categories, otherwise an empty set
+     */
+    public Set<OptionCategory> getDeniedCategories(String deniedCategories) {
+        return Optional.ofNullable(deniedCategories)
+                .filter(StringUtil::isNotBlank)
+                .map(f -> f.split(" "))
+                .map(Arrays::asList)
+                .map(f -> f.stream()
+                        .map(g -> {
+                            try {
+                                return OptionCategory.valueOf(g.toUpperCase());
+                            } catch (IllegalArgumentException e) {
+                                throw new IllegalArgumentException("You have specified wrong category name in the 'deniedCategories' property", e);
+                            }
+                        })
+                        .collect(Collectors.toSet()))
+                .orElseGet(Collections::emptySet);
+    }
+
+    public List<Option> getOptions(String includeOptions, String deniedCategories) {
         final String r = includeOptions.replaceAll("\\.", "\\\\.").replaceAll("\\*", ".*").replace(' ', '|');
-        return this.options.values().stream().filter(o -> o.getKey().matches(r)).collect(Collectors.toList());
+        final Set<OptionCategory> denied = getDeniedCategories(deniedCategories);
+
+        return options.values()
+                .stream()
+                .flatMap(Collection::stream)
+                .filter(f -> !denied.contains(f.category))
+                .filter(f -> f.getKey().matches(r))
+                .toList();
     }
 
     public Map<String, Map<String, List<Option>>> getProviderOptions() {
